# submit-metamodule

./: .gitignore  CMakeLists.txt  RELEASE.md  plugin-mm.json  plugin.json
.github/workflows/: build-metamodule-plugin.yml
metamodule-plugins/: Submit-v2.1.mmplugin  Submit.mmplugin
src/: Chain.cpp  Chrono.cpp  Drift13.cpp  Gain.cpp  Impact.cpp  Impact.cpp.backup_lpf  Impact.cpp.backup_working  Loop.cpp  LoopCore.cpp  Master.cpp  Shape.cpp  Squeeze.cpp  Sweep.cpp  plugin.cpp  plugin.hpp
